	* python_to_octave.cc (pydict_to_octmap): Make scalar structs by
	default, detect matching dimensions.
	* package/pytave.py (feval): Update doc string.
	(getvar, setvar, isvar): Remove.
	(_VariablesDict): New class.
	(locals, globals): Default instances.
	(_local_scope): Rename to _LocalScope
	* test/test.py: New tests. Update old tests.

2009-06-03  Jaroslav Hajek  <highegg@gmail.com>

	* python_to_octave.cc (copy_pyarrobj_to_octarray<PyObject *,
	Cell>): New template specialization.
	(matching_type<PyObject *, octave_value>): Ditto.
	(copy_pyarrobj_to_octarray_boot): Include PyArray_CHAR
	and PyArray_Object cases.
	(pyarr_to_octvalue): Likewise.
	* test/test.py: Add tests for the new conversions.

2009-06-03  David Grundberg  <individ@acc.umu.se>

	* octave_to_python.cc (create_uint_array, create_sint_array):
	Prefer int to other datatypes of identical size.
	(is_1xn_or_0x0): Whitespace.
	* python_to_octave.cc (copy_pyarrobj_to_octarray_dispatch): Prefer
	int to other datatypes of identical size.

2009-05-28  Jaroslav Hajek  <highegg@gmail.com>

	* configure.ac: Remove --enable-float-matrices option.
	* octave_to_python.cc: Remove uses of PYTAVE_USE_OCTAVE_FLOAT.
	* python_to_octave.cc: Ditto.

2009-05-26  Jaroslav Hajek  <highegg@gmail.com>

	* octave_to_python.cc (octvalue_to_pyarrobj): Support Complex
	and FloatComplex values.
	(octvalue_to_pyobj): Support complex scalars.
	* python_to_octave.cc (copy_pyarrobj_to_octarray_dispatch):
	New template function.
	(matching_type): New helper traits class.
	(copy_pyarrobj_to_octarray_dispatch): Support complex types.
	(pyarrobj_to_octvalue): Support complex scalars.
	* test/test.py: Add tests for complex values.

2009-05-26  Jaroslav Hajek  <highegg@gmail.com>

	* octave_to_python.cc: New #include (boost/type_traits).
	(copy_octarray_to_pyarrobj): Don't use .value(); don't	specialize.
	(create_array (..., boost::true_type)): New overload (forward).
	(create_array (..., boost::false_type)): New overload (dummy).